@@ -1,4 +1,4 @@
-http\://www.springframework.org/schema/osgi/spring-osgi-1.0-rc2.xsd=org/springframework/osgi/config/spring-osgi-1.0-rc2.xsd
-http\://www.springframework.org/schema/osgi/spring-osgi.xsd=org/springframework/osgi/config/spring-osgi-1.0-rc2.xsd
-http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-1.0-rc2.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.0-rc2.xsd
-http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.0-rc2.xsd
+http\://www.springframework.org/schema/osgi/spring-osgi-1.0.xsd=org/springframework/osgi/config/spring-osgi-1.0.xsd
+http\://www.springframework.org/schema/osgi/spring-osgi.xsd=org/springframework/osgi/config/spring-osgi-1.0.xsd
+http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-1.0.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.0.xsd
+http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.0.xsd
